# termichess

./: Cargo.toml  LICENSE  README.md  termichess.toml
server/: Cargo.toml  test.py
server/src/: lib.rs  main.rs
src/: lib.rs  main.rs  prelude.rs
src/game/: board.rs  display.rs  mod.rs  moves.rs  notation.rs  piece.rs  reach.rs  serialize.rs  update.rs
src/local/: mod.rs  play.rs
src/remote/: play.rs
src/util/: config.rs  input.rs  mod.rs
